--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@heroicons/react": "^2.0.12",
     "js-cookie": "^3.0.1",
+    "lodash": "^4.17.21",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-textarea-autosize": "^8.3.4",
     "swr": "^1.3.0",
     "vk-io": "^4.7.0"
   },
