--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.12",
     "js-cookie": "^3.0.1",
+    "keyboardjs": "^2.7.0",
     "lodash": "^4.17.21",
     "next": "12.3.1",
     "react": "18.2.0",
