--- a/package.json
+++ b/package.json
@@ -10,15 +10,13 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.12",
-    "js-cookie": "^3.0.1",
+    "jotai": "^1.8.5",
     "keyboardjs": "^2.7.0",
     "lodash": "^4.17.21",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-textarea-autosize": "^8.3.4",
-    "swr": "^1.3.0",
-    "vk-io": "^4.7.0"
+    "react-textarea-autosize": "^8.3.4"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.2",
